# autogram_md_backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile
migrations/: 20260320000001_create_enums.sql  20260320000002_create_users.sql  20260320000003_create_car_makes_models.sql  20260320000004_create_listings.sql  20260320000005_create_listing_photos.sql  20260320000006_create_likes_favorites.sql  20260320000007_seed_makes_models.sql  20260320000008_fix_photo_urls.sql  20260320000009_fix_photo_urls_r2.sql  20260320000010_add_removal_reason.sql  20260322000001_create_payments.sql  20260322000002_add_boost_promote.sql  20260323000001_create_message_templates.sql  20260323000002_create_saved_searches.sql  20260323000003_create_notifications.sql  20260323000004_add_listing_fields.sql  20260324000001_create_user_preferences.sql  20260329000001_add_contact_seller_template.sql  20260329000002_add_payments_updated_at_trigger.sql  20260329000003_add_expired_removal_reason.sql
src/: config.rs  lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/extractors/: auth.rs  mod.rs
src/api/handlers/: auth.rs  cars.rs  health.rs  mod.rs  payments.rs  saved_searches.rs  templates.rs  users.rs
src/api/middleware/: mod.rs
src/application/: mod.rs
src/application/dto/: auth.rs  car.rs  mod.rs  payment.rs  saved_search.rs
src/application/ports/: car_repository.rs  mod.rs  notification_repository.rs  (+7 more)
src/domain/: car.rs  error.rs  message_template.rs  mod.rs  notification.rs  payment.rs  saved_search.rs  user.rs  user_preference.rs
src/infrastructure/: mod.rs  scheduler.rs
(+27 files in other folders)
