[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp"] }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
image = "0.25"
base64 = "0.22"
dotenvy = "0.15"
envy = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
url = "2"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
futures-util = "0.3"
actix-governor = "0.6"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
mockall = "0.13"
actix-rt = "2"
